ZFIN-8935 fix HQL query: set feature.zdbID = featureZdbID